Bug 818611: Move declaration of "GSource* gs" to beginning of code block, to fix build warning in gtk2xtbin.c. r=karlt