widget/gtkxtbin/gtk2xtbin.c
@@ -464,7 +464,8 @@ xt_client_xloop_create(void)
   /* If this is the first running widget, hook this display into the
      mainloop */
   if (0 == num_widgets) {
-    int           cnumber;
+    int cnumber;
+    GSource* gs;
 
     /* Set up xtdisplay in case we're missing one */
     if (!xtdisplay) {
@@ -475,11 +476,11 @@ xt_client_xloop_create(void)
      * hook Xt event loop into the glib event loop.
      */
     /* the assumption is that gtk_init has already been called */
-    GSource* gs = g_source_new(&xt_event_funcs, sizeof(GSource));
-      if (!gs) {
-       return;
-      }
-    
+    gs = g_source_new(&xt_event_funcs, sizeof(GSource));
+    if (!gs) {
+      return;
+    }
+
     g_source_set_priority(gs, GDK_PRIORITY_EVENTS);
     g_source_set_can_recurse(gs, TRUE);
     tag = g_source_attach(gs, (GMainContext*)NULL);
